# Mini-PPT

./: .gitignore  README.md  config.py  dataset.py  eval.py  model.py  plot_benchmark_results.py  prepare_data.py  pyproject.toml  run_all_experiments.sh  text_encoder.py  train.py  utils.py
results/: summary_table.csv  summary_table.md
runs_pointnet/: benchmark_results.csv  benchmark_results.md
runs_pointnet/benchmark_joint_decoupled/: config.json  history.json  summary.json
runs_pointnet/benchmark_joint_decoupled_pdnorm/: config.json  history.json  summary.json
runs_pointnet/benchmark_joint_language_guided/: config.json  history.json  summary.json
runs_pointnet/benchmark_joint_language_guided_pdnorm/: config.json  history.json  summary.json
runs_pointnet/benchmark_single_modelnet40/: config.json  history.json  summary.json
runs_pointnet/benchmark_single_scanobjectnn/: config.json  history.json  summary.json
scripts/: analyze_language_projection.py  analyze_semantic_alignment.py  plot_benchmark_results.py  run_all_experiments.sh  run_semantic_alignment_suite.sh
